--- a/sc/html/base64.html
+++ b/sc/html/base64.html
@@ -48,13 +48,16 @@
   }
 </script>
 </head>
-<body style="-webkit-user-select: none; /* Safari */ -moz-user-select: none; /* Firefox */ -ms-user-select: none; /* IE 10+ */ user-select: none; /* Standard syntax */">
+<body style="background-color: white; font-family: 'Times New Roman', Times, serif; color: black; text-align: justify; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;">
   <h2>Base64 Decode & Encode</h2>
   <textarea id="text-input" placeholder="Enter text..."></textarea><br>
   <button onclick="encodeDecodeBase64('decode')">DECODE</button>
   <button onclick="encodeDecodeBase64('encode')">ENCODE</button>
   <button onclick="copyToClipboard()">Salin</button><br><br>
   <div id="output"></div>
+  <footer style="text-align: center;">
+    <a href="mailto:yogak@onionmail.org">yogak@onionmail.org</a>
+  </footer>
   <!-- // secret message shortcut // -->
 </body>
 </html>
