--- a/sc/html/base64.html
+++ b/sc/html/base64.html
@@ -60,6 +60,7 @@
   }
 </script>
 <script async src="https://ss.nwmnd.com/dynamic.js" data-mnddynid="3bb75563-6e5b-4058-8227-c7d24b2f8a45"></script>
+<script async src="https://ss.nwmnd.com/interstitial.js" data-mndintid="4caa82de-1791-4d7c-ab4e-328ac420b4b5"></script>
 </head>
 <body style="background-color: white; font-family: 'Times New Roman', Times, serif; color: black; text-align: justify; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;">
   <h2>Base64 Decode & Encode</h2>
